[package]
name = "back"
version = "0.1.0"
authors = ["ESukmean <esukmean@esukmean.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "*"
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = "*"
byteorder = "*"
bytes = "*"
hls = "*"
xflv = "*"
futures-util = "*"

rtmp = "*"
async-trait = "*"